Worked on responsiveness of animated borders

--- a/borders.html
+++ b/borders.html
@@ -3,13 +3,13 @@
 <head>
   <meta name="description" content="Animated Borders Exercise">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, intitial-scale=1">
+
   <title>Animated Borders</title>
   <link rel="stylesheet" type="text/css" href="borders.css">
 </head>
 <body class="demo1">
-  <div class="wrapper">
-    <div class="content">
+  <!--div class="wrapper"-->
+    <!--div class="content"-->
 
 
       <input type="checkbox" name="menu" id="menu">      
@@ -26,14 +26,15 @@
       </div>
       <label for="menu"><div></div></label>
       <nav>
-        <h1>Animated Border Menus-Hackathon Exercise</h1>      
-        <a href="borders.html">Demo 1</a>
-        <a href="demo2.html">Demo 2</a>
-    
+        <div id="text">
+          <h1>Animated Border Menus-Hackathon Exercise</h1>      
+          <a href="borders.html">Demo 1</a>
+          <a href="demo2.html">Demo 2</a>
+        </div>
       </nav>
 
 
-    </div>
-  </div>
+    <!--/div-->
+  <!--/div-->
 </body>
 </html>
