--- a/demo2.html
+++ b/demo2.html
@@ -3,14 +3,14 @@
 <head>
   <meta name="description" content="Animated Borders Exercise">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, intitial-scale=1">
+
   <title>Animated Borders</title>
   <link rel="stylesheet" type="text/css" href="borders.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">  
 </head>
 <body class="demo2">
-  <div class="wrapper">
-    <div class="content">
+  <!--div class="wrapper"-->
+    <!--div class="content"-->
 
 
       <input type="checkbox" name="menu" id="menu">      
@@ -25,18 +25,21 @@
       	  <li><a src="#">CLIENTS</a></li>
       	  <li><a src="#">CONTACT</a></li>
       	</ul>
-
-      </div>
       <label for="menu"><a src="#"><div></div></a></label>
+      </div>
+
       <nav>
+        <div id="text">
         <h1>Animated Border Menus-Hackathon Exercise</h1>      
         <a href="borders.html">Demo 1</a>
         <a href="demo2.html">Demo 2</a>
+        </div>
     
       </nav>
 
 
-    </div>
-  </div>
+
+    <!--/div-->
+  <!--/div-->
 </body>
 </html>
